# src/document/layanan.swagger.json
@@ -524,15 +524,358 @@
               "application/json": {
                 "example": {
                   "success": true,
-                  "message": "Berhasil mengunggah Modul 'dsfbbsyby rtby' !",
+                  "message": "Berhasil mengajukan layanan!",
                   "data": {
-                    "id": 3,
-                    "id_dibuat_oleh": 42,
-                    "judul_modul": "dsfbbsyby rtby",
-                    "deskripsi": "trghun jn uiu ",
-                    "file_modul": "https://res.cloudinary.com/darsrhtsb/raw/upload/v1761398548/konten-kopiraisa/modul/1761398547378_FORMAT%20-%20SURAT%20PENGANTAR.docx.pdf",
-                    "created_at": "2025-10-25T13:22:29.457Z",
-                    "updated_at": "2025-10-25T13:22:29.457Z"
+                    "id": 1,
+                    "id_user": 43,
+                    "id_jenis_layanan": 1,
+                    "id_konfigurasi_layanan": 7,
+                    "id_status_pengajuan": 1,
+                    "id_status_pelaksanaan": 1,
+                    "nama_kegiatan": null,
+                    "tempat_kegiatan": null,
+                    "jumlah_peserta": 1,
+                    "instansi_asal": "Universitas Jember",
+                    "tanggal_mulai": "2025-11-08T08:00:00.000Z",
+                    "tanggal_selesai": "2025-11-08T12:00:00.000Z",
+                    "link_logbook": "google.com",
+                    "file_proposal": "https://res.cloudinary.com/db8lhx2hz/raw/upload/v1763479649/konten-kopiraisa/layanan/1763479647615_fd6b7fdabaf3ef7b9c84.pdf",
+                    "file_surat_permohonan": null,
+                    "file_surat_pengantar": "https://res.cloudinary.com/db8lhx2hz/raw/upload/v1763479650/konten-kopiraisa/layanan/1763479650010_b3e46146387f990d17c2.pdf",
+                    "file_surat_undangan": null,
+                    "created_at": "2025-11-18T15:27:31.018Z",
+                    "konfigurasiLayanan": {
+                      "id": 7,
+                      "id_jenis_layanan": 1,
+                      "versi_konfig": "2025-11-18T15:27:23.931Z",
+                      "hash_konfigurasi": "17f25dcb2b3676a410f0bac95aa5d03c68c54415f8da56aacf234a297e6d04cf",
+                      "is_active": false,
+                      "catatan": null,
+                      "created_at": "2025-11-18T15:27:23.931Z",
+                      "detailKonfigurasis": [
+                        {
+                          "id": 189,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 1,
+                          "id_sub_kegiatan": 1,
+                          "urutan_ke": 1,
+                          "kegiatan": {
+                            "id": 1,
+                            "nama_kegiatan": "Pengenalan Tanaman Kopi",
+                            "deskripsi": "Mengenal jenis dan karakter kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 1,
+                            "id_kegiatan": 1,
+                            "nama_sub_kegiatan": "Pengenalan Tanaman Kopi",
+                            "jam_durasi": null,
+                            "deskripsi": "Mengenal jenis dan morfologi kopi"
+                          }
+                        },
+                        {
+                          "id": 190,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 2,
+                          "urutan_ke": 2,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 2,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Pembersihan Areal",
+                            "jam_durasi": null,
+                            "deskripsi": "Membersihkan gulma dan semak di lahan"
+                          }
+                        },
+                        {
+                          "id": 191,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 3,
+                          "urutan_ke": 3,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 3,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Pengolahan Tanah",
+                            "jam_durasi": null,
+                            "deskripsi": "Mencangkul dan menggemburkan tanah tanam"
+                          }
+                        },
+                        {
+                          "id": 192,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 4,
+                          "urutan_ke": 4,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 4,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Pohon Pelindung",
+                            "jam_durasi": null,
+                            "deskripsi": "Menanam atau merawat pohon pelindung"
+                          }
+                        },
+                        {
+                          "id": 193,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 5,
+                          "urutan_ke": 5,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 5,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Jarak Tanam",
+                            "jam_durasi": null,
+                            "deskripsi": "Menentukan jarak antar lubang tanam"
+                          }
+                        },
+                        {
+                          "id": 194,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 6,
+                          "urutan_ke": 6,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 6,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Lubang Tanam",
+                            "jam_durasi": null,
+                            "deskripsi": "Membuat lubang sesuai ukuran standar"
+                          }
+                        },
+                        {
+                          "id": 195,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 7,
+                          "urutan_ke": 7,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 7,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Tanaman Belum Menghasilkan (TBM)",
+                            "jam_durasi": null,
+                            "deskripsi": "Menyiapkan area untuk TBM"
+                          }
+                        },
+                        {
+                          "id": 196,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 2,
+                          "id_sub_kegiatan": 8,
+                          "urutan_ke": 8,
+                          "kegiatan": {
+                            "id": 2,
+                            "nama_kegiatan": "Persiapan Lahan",
+                            "deskripsi": "Menyiapkan lahan tanam kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 8,
+                            "id_kegiatan": 2,
+                            "nama_sub_kegiatan": "Tanaman Menghasilkan (TM)",
+                            "jam_durasi": null,
+                            "deskripsi": "Menyiapkan area untuk TM"
+                          }
+                        },
+                        {
+                          "id": 197,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 3,
+                          "id_sub_kegiatan": 9,
+                          "urutan_ke": 9,
+                          "kegiatan": {
+                            "id": 3,
+                            "nama_kegiatan": "Pembibitan",
+                            "deskripsi": "Membuat dan merawat bibit kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 9,
+                            "id_kegiatan": 3,
+                            "nama_sub_kegiatan": "Perbanyakan Vegetatif",
+                            "jam_durasi": null,
+                            "deskripsi": "Melakukan stek atau cangkok bibit"
+                          }
+                        },
+                        {
+                          "id": 198,
+                          "id_konfigurasi_layanan": 7,
+                          "id_kegiatan": 3,
+                          "id_sub_kegiatan": 10,
+                          "urutan_ke": 10,
+                          "kegiatan": {
+                            "id": 3,
+                            "nama_kegiatan": "Pembibitan",
+                            "deskripsi": "Membuat dan merawat bibit kopi"
+                          },
+                          "subKegiatan": {
+                            "id": 10,
+                            "id_kegiatan": 3,
+                            "nama_sub_kegiatan": "Perbanyakan Generatif",
+                            "jam_durasi": null,
+                            "deskripsi": "Menyemaikan benih dari biji kopi"
+                          }
+                        }
+                      ]
+                    },
+                    "statusKodePengajuan": {
+                      "id": 1,
+                      "nama_status_kode": "Menunggu Persetujuan"
+                    },
+                    "statusKodePelaksanaan": {
+                      "id": 1,
+                      "nama_status_kode": "Menunggu Persetujuan"
+                    },
+                    "jenisLayanan": {
+                      "id": 1,
+                      "nama_jenis_layanan": "Praktek Kerja Lapangan (PKL)",
+                      "deskripsi_singkat": "PKL bagi siswa dan mahasiswa di industri kopi",
+                      "deskripsi_lengkap": "Program PKL di Sekolah Kopi RAISA memberikan kesempatan bagi siswa dan mahasiswa untuk belajar langsung di lingkungan industri kopi. Peserta akan memahami tahapan budidaya kopi, panen, pasca panen, roasting, hingga penyajian (barista). Kegiatan ini dilaksanakan secara terstruktur dengan pendampingan mentor profesional dari RAISA.",
+                      "image": "https://res.cloudinary.com/db8lhx2hz/image/upload/v1762929272/konten-kopiraisa/jenis-layanan/1762929270932_2fdcb4bd794b3e057939.webp",
+                      "estimasi_waktu": "2 - 4 Bulan",
+                      "id_target_peserta": 2
+                    },
+                    "user": {
+                      "id": 43,
+                      "name": "Hikam testing",
+                      "image": null,
+                      "email": "3rd.hikam074@gmail.com",
+                      "password": "$2b$10$jXKGeuzE1i8pmAqaSIPUZ.XACLkWzGuMx8Zgk/kqrxDtpK0HVtvUm",
+                      "phone_number": "081331178888",
+                      "admin": false,
+                      "verified": false,
+                      "createdAt": "2025-10-04T12:44:52.986Z",
+                      "updated_at": "2025-10-23T16:12:30.862Z",
+                      "google_id": null,
+                      "role": null
+                    },
+                    "peserta": [
+                      {
+                        "id": 1,
+                        "id_layanan": 1,
+                        "nama_peserta": "Hikam testing",
+                        "instansi_asal": "Universitas Jember",
+                        "fakultas": "Pertanian",
+                        "program_studi": "Ilmu Tanah",
+                        "nim": "12345",
+                        "predikat": null
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/layanan/pengajuan/{id}": {
+      "put": {
+        "tags": [
+          "Layanan"
+        ],
+        "summary": "Update status pengajuan layanan, including rejection",
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID dari layanan yang ingin diubah",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id_status_pengajuan": {
+                    "type": "number",
+                    "example": 6
+                  },
+                  "alasan": {
+                    "type": "string",
+                    "example": "Dokumen kurang valid"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Modul created successfully",
+            "content": {
+              "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Berhasil memperbarui status layanan!",
+                  "data": {
+                    "id": 1,
+                    "id_user": 43,
+                    "id_jenis_layanan": 1,
+                    "id_konfigurasi_layanan": 7,
+                    "id_status_pengajuan": 6,
+                    "id_status_pelaksanaan": 1,
+                    "nama_kegiatan": null,
+                    "tempat_kegiatan": null,
+                    "jumlah_peserta": 1,
+                    "instansi_asal": "Universitas Jember",
+                    "tanggal_mulai": "2025-11-08T08:00:00.000Z",
+                    "tanggal_selesai": "2025-11-08T12:00:00.000Z",
+                    "link_logbook": "google.com",
+                    "file_proposal": "https://res.cloudinary.com/db8lhx2hz/raw/upload/v1763479649/konten-kopiraisa/layanan/1763479647615_fd6b7fdabaf3ef7b9c84.pdf",
+                    "file_surat_permohonan": null,
+                    "file_surat_pengantar": "https://res.cloudinary.com/db8lhx2hz/raw/upload/v1763479650/konten-kopiraisa/layanan/1763479650010_b3e46146387f990d17c2.pdf",
+                    "file_surat_undangan": null,
+                    "created_at": "2025-11-18T15:27:31.018Z",
+                    "statusKodePengajuan": {
+                      "id": 6,
+                      "nama_status_kode": "Ditolak"
+                    },
+                    "alasan": {
+                      "id": 1,
+                      "id_layanan": 1,
+                      "alasan": "Dokumen kurang valid",
+                      "created_at": "2025-11-18T16:18:22.616Z"
+                    }
                   }
                 }
               }
